--- a/gcp/scheduling-dev-wkld.yaml
+++ b/gcp/scheduling-dev-wkld.yaml
@@ -62,7 +62,7 @@ spec:
       kind: GCPMachineTemplate
       name: scheduling-dev-wkld-control-plane
   replicas: 1
-  version: v1.21.10
+  version: v1.25.0
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: GCPMachineTemplate
@@ -72,7 +72,7 @@ metadata:
 spec:
   template:
     spec:
-      image: projects/k8s-ecoqube-development/global/images/cluster-api-ubuntu-1804-v1-21-10-1652204960
+      image: projects/k8s-ecoqube-development/global/images/cluster-api-ubuntu-2004-v1-25-0-1662644962
       instanceType: n1-standard-2
 ---
 apiVersion: cluster.x-k8s.io/v1beta1
@@ -98,7 +98,7 @@ spec:
         apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
         kind: GCPMachineTemplate
         name: scheduling-dev-wkld-md-0
-      version: v1.21.10
+      version: v1.25.0
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: GCPMachineTemplate
@@ -108,7 +108,7 @@ metadata:
 spec:
   template:
     spec:
-      image: projects/k8s-ecoqube-development/global/images/cluster-api-ubuntu-1804-v1-21-10-1652204960
+      image: projects/k8s-ecoqube-development/global/images/cluster-api-ubuntu-2004-v1-25-0-1662644962
       instanceType: n1-standard-2
 ---
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
@@ -119,14 +119,6 @@ metadata:
 spec:
   template:
     spec:
-      postKubeadmCommands:
-       - mkdir /etc/certs/
-       - cp /etc/kubernetes/pki/ca.key /etc/certs/client.key
-       - cp /etc/kubernetes/pki/ca.crt /etc/certs/client.crt
-       - sed -e "/    - kube-scheduler/a\\    - --policy-configmap=scheduler-extender-policy\n    - --policy-configmap-namespace=kube-system" /etc/kubernetes/manifests/kube-scheduler.yaml -i
-       - 'sed -e "/spec/a\\  dnsPolicy: ClusterFirstWithHostNet" /etc/kubernetes/manifests/kube-scheduler.yaml -i'
-       - 'sed -e "/    volumeMounts:/a\\    - mountPath: /host/certs\n      name: certdir" /etc/kubernetes/manifests/kube-scheduler.yaml -i'
-       - 'sed -e "/  volumes:/a\\  - hostPath:\n      path: /etc/certs\n    name: certdir" /etc/kubernetes/manifests/kube-scheduler.yaml -i'
       joinConfiguration:
         nodeRegistration:
           kubeletExtraArgs:
@@ -3173,6 +3165,32 @@ kind: ConfigMap
 metadata:
   creationTimestamp: null
   name: scheduler-extender-configmap
+---
+apiVersion: v1
+data:
+  scheduler-componentconfig.yaml: |
+    apiVersion: kubescheduler.config.k8s.io/v1beta2
+    kind: KubeSchedulerConfiguration
+    clientConnection:
+      kubeconfig: /etc/kubernetes/scheduler.conf
+    extenders:
+      - urlPrefix: "https://tas-service.default.svc.cluster.local:9001"
+        prioritizeVerb: "scheduler/prioritize"
+        filterVerb: "scheduler/filter"
+        weight: 1
+        enableHTTPS: true
+        managedResources:
+          - name: "telemetry/scheduling"
+            ignoredByScheduler: true
+        ignorable: true
+        tlsConfig:
+          insecure: false
+          certFile: "/host/certs/client.crt"
+          keyFile: "/host/certs/client.key"
+kind: ConfigMap
+metadata:
+  creationTimestamp: null
+  name: scheduler-componentconfig-configmap
 --- # ClusterResourceSets
 apiVersion: addons.cluster.x-k8s.io/v1alpha3
 kind: ClusterResourceSet
@@ -3233,3 +3251,27 @@ spec:
   resources:
     - kind: ConfigMap
       name: scheduler-extender-configmap
+---
+apiVersion: addons.cluster.x-k8s.io/v1alpha3
+kind: ClusterResourceSet
+metadata:
+  name: calico
+spec:
+  clusterSelector:
+    matchLabels:
+      cni: calico
+  resources:
+    - kind: ConfigMap
+      name: calico-configmap
+---
+apiVersion: addons.cluster.x-k8s.io/v1alpha3
+kind: ClusterResourceSet
+metadata:
+  name: scheduler-componentconfig
+spec:
+  clusterSelector:
+    matchLabels:
+      scheduler: tas
+  resources:
+    - kind: ConfigMap
+      name: scheduler-componentconfig-configmap
