Continue setting up TAS automated install documentation, new kubeconfigs

--- a/gcp/scheduling-dev-wkld.yaml
+++ b/gcp/scheduling-dev-wkld.yaml
@@ -37,6 +37,27 @@ metadata:
   namespace: default
 spec:
   kubeadmConfigSpec:
+    files:
+      - path: /etc/kubernetes/schedulerconfig/scheduler-componentconfig.yaml
+        content: |
+          apiVersion: kubescheduler.config.k8s.io/v1
+          kind: KubeSchedulerConfiguration
+          clientConnection:
+            kubeconfig: /etc/kubernetes/scheduler.conf
+          extenders:
+            - urlPrefix: "https://tas-service.default.svc.cluster.local:9001"
+              prioritizeVerb: "scheduler/prioritize"
+              filterVerb: "scheduler/filter"
+              weight: 1
+              enableHTTPS: true
+              managedResources:
+                - name: "telemetry/scheduling"
+                  ignoredByScheduler: true
+              ignorable: true
+              tlsConfig:
+                insecure: false
+                certFile: "/host/certs/client.crt"
+                keyFile: "/host/certs/client.key"
     clusterConfiguration:
       apiServer:
         extraArgs:
@@ -46,6 +67,19 @@ spec:
         extraArgs:
           allocate-node-cidrs: "false"
           cloud-provider: gce
+      scheduler:
+        extraArgs:
+          config: "/etc/kubernetes/schedulerconfig/scheduler-componentconfig.yaml"
+        extraVolumes:
+          - hostPath: "/etc/kubernetes/schedulerconfig"
+            mountPath: "/etc/kubernetes/schedulerconfig"
+            name: schedulerconfig
+          - hostPath: "/etc/kubernetes/pki/ca.key"
+            mountPath: "/host/certs/client.key"
+            name: cacert
+          - hostPath: "/etc/kubernetes/pki/ca.crt"
+            mountPath: "/host/certs/client.crt"
+            name: clientcert
     initConfiguration:
       nodeRegistration:
         kubeletExtraArgs:
