--- a/gcp/capi-resource-set/manifests/resource-original-definition/extender.yaml
+++ b/gcp/capi-resource-set/manifests/resource-original-definition/extender.yaml
@@ -228,7 +228,7 @@ metadata:
   name: configmapgetter
 rules:
 - apiGroups: [""]
-  resources: ["configmaps"]
+  resources: ["list, configmaps, watch"]
   verbs: ["get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
