--- a/gcp/capi-resource-set/manifests/resource-original-definition/extender.yaml
+++ b/gcp/capi-resource-set/manifests/resource-original-definition/extender.yaml
@@ -15,7 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: telemetry-aware-scheduling
-  namespace: default 
+  namespace: default
   labels:
     app: tas
 spec:
@@ -30,47 +30,50 @@ spec:
     spec:
       serviceAccountName: telemetry-aware-scheduling-service-account
       containers:
-      - name: tasext
-        command:
-        - /extender
-        - --syncPeriod=2s
-        - --cert=/tas/cert/tls.crt
-        - --key=/tas/cert/tls.key
-        - --cacert=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-        - --v=2
-        image: intel/telemetry-aware-scheduling
-        imagePullPolicy: IfNotPresent
-        securityContext:
-          capabilities:
-            drop:
-              - all
-          readOnlyRootFilesystem: true
-          runAsNonRoot: true
-          runAsUser: 10001
-        volumeMounts:
-        - name: certs
-          mountPath: /tas/cert
-        resources:
-          limits:
-            memory: "500Mi"
-            cpu: "500m"
-          requests:
-            memory: "100Mi"
-            cpu: "100m"
+        - name: tasext
+          command:
+            - /extender
+            - --syncPeriod=2s
+            - --cert=/tas/cert/tls.crt
+            - --key=/tas/cert/tls.key
+            - --cacert=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+            - --v=2
+          image: intel/telemetry-aware-scheduling
+          imagePullPolicy: IfNotPresent
+          securityContext:
+            capabilities:
+              drop:
+                - all
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 10001
+          volumeMounts:
+            - name: certs
+              mountPath: /tas/cert
+          resources:
+            limits:
+              memory: "500Mi"
+              cpu: "500m"
+            requests:
+              memory: "100Mi"
+              cpu: "100m"
       volumes:
-      - name: certs
-        secret:
-          secretName: extender-secret
+        - name: certs
+          secret:
+            secretName: extender-secret
       tolerations:
-      - key: node-role.kubernetes.io/master
-        operator: Exists
+        - key: node-role.kubernetes.io/master
+          operator: Exists
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
+          effect: "NoSchedule"
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
-            - matchExpressions:
-              - key: node-role.kubernetes.io/master
-                operator: Exists
+              - matchExpressions:
+                  - key: node-role.kubernetes.io/control-plane
+                    operator: Exists
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -228,7 +231,7 @@ metadata:
   name: configmapgetter
 rules:
 - apiGroups: [""]
-  resources: ["list, configmaps, watch"]
+  resources: ["configmaps"]
   verbs: ["get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
