--- a/gcp/capi-resource-set/manifests/scheduler-extender-configmap.yaml
+++ b/gcp/capi-resource-set/manifests/scheduler-extender-configmap.yaml
@@ -18,11 +18,12 @@ data:
     \             memory: \"100Mi\"\n              cpu: \"100m\"\n      volumes:\n
     \       - name: certs\n          secret:\n            secretName: extender-secret\n
     \     tolerations:\n        - key: node-role.kubernetes.io/master\n          operator:
-    Exists\n        - key: node-role.kubernetes.io/control-plane\n          operator:
-    Exists\n      affinity:\n        nodeAffinity:\n          requiredDuringSchedulingIgnoredDuringExecution:\n
-    \           nodeSelectorTerms:\n              - matchExpressions:\n                  -
-    key: node-role.kubernetes.io/control-plane\n                    operator: Exists\n---\napiVersion:
-    apiextensions.k8s.io/v1\nkind: CustomResourceDefinition\nmetadata:\n  name: taspolicies.telemetry.intel.com\n
+    Exists\n        - key: \"node-role.kubernetes.io/control-plane\"\n          operator:
+    \"Exists\"\n          effect: \"NoSchedule\"\n      affinity:\n        nodeAffinity:\n
+    \         requiredDuringSchedulingIgnoredDuringExecution:\n            nodeSelectorTerms:\n
+    \             - matchExpressions:\n                  - key: node-role.kubernetes.io/control-plane\n
+    \                   operator: Exists\n---\napiVersion: apiextensions.k8s.io/v1\nkind:
+    CustomResourceDefinition\nmetadata:\n  name: taspolicies.telemetry.intel.com\n
     \ namespace: default\nspec:\n  group: telemetry.intel.com\n  names:\n    kind:
     TASPolicy\n    listKind: TASPolicyList\n    plural: taspolicies\n    singular:
     taspolicy\n  scope: Namespaced\n  versions:\n    - name: v1alpha1\n      served:
