--- a/gcp/capi-resource-set/manifests/original-manifests/scheduler-componentconfig.yaml
+++ b/gcp/capi-resource-set/manifests/original-manifests/scheduler-componentconfig.yaml
@@ -1,3 +1,4 @@
+# Placed in filesystem using CAPI, filepath passed as CLI flag to the scheduler
 apiVersion: kubescheduler.config.k8s.io/v1beta2
 kind: KubeSchedulerConfiguration
 clientConnection:
