--- a/gcp/capi-resource-set/manifests/original-manifests/custom-metrics-apiserver.yaml
+++ b/gcp/capi-resource-set/manifests/original-manifests/custom-metrics-apiserver.yaml
@@ -221,15 +221,6 @@ data:
       name:
         matches: ^node_(.*)
       metricsQuery: <<.Series>>
-    - seriesQuery: '{__name__="cpu_diff_target"}'
-      resources:
-        overrides:
-          instance:
-            resource: node
-      name:
-        matches: ^cpu_(.*)_target
-      # metricsQuery: node_cpu_diff - 100 + 100 * avg by (instance, job) (rate(node_cpu_seconds_total{mode="idle"}[1m]))
-      metricsQuery: avg by (instance) (label_replace(cpu_diff_target, "instance", "$1", "exported_instance", "(.*)")) - 100 + 100 * avg by (instance) (rate(node_cpu_seconds_total{mode="idle"}[1m]))
     - seriesQuery: '{namespace!="",__name__!~"^container_.*"}'
       seriesFilters: []
       resources:
@@ -238,6 +229,36 @@ data:
         matches: ^(.*)_seconds_total$
         as: ""
       metricsQuery: sum(<<.Series>>{<<.LabelMatchers>>}[1m]) by (<<.GroupBy>>)
+    # Fake energy consumption (based on CPU and fake coefficient)
+    - seriesQuery: '{__name__="node_cpu_seconds_total"}'
+      resources:
+        overrides:
+          instance:
+            resource: node
+      name:
+        matches: '.*'
+        as: "node_fake_energy_consumption"
+      metricsQuery: 1000 + ((100 - 100 * (avg by (instance) (rate(node_cpu_seconds_total{mode="idle"}[1m])))) * 100)
+    # Fake energy target (from target-exporter service)
+    - seriesQuery: '{__name__="fake_energy_target"}'
+      resources:
+        overrides:
+          exported_instance:
+            resource: node
+      name:
+        matches: '.*'
+        as: "node_fake_energy_target"
+      metricsQuery: fake_energy_target
+      # Difference between fake energy consumption and fake energy target
+    - seriesQuery: '{__name__="fake_energy_target"}'
+      resources:
+        overrides:
+          instance:
+            resource: node
+      name:
+        matches: '.*'
+        as: "node_fake_energy_target_diff"
+      metricsQuery: avg by (instance) (label_replace(fake_energy_target, "instance", "$1", "exported_instance", "(.*)")) - 100 + 100 * avg by (instance) (rate(node_cpu_seconds_total{mode="idle"}[1m]))
 ---
 # Source: prometheus_custom_metrics_helm_chart/templates/custom-metrics-resource-reader-cluster-role.yaml
 apiVersion: rbac.authorization.k8s.io/v1
