--- a/docker/bueringer/docker-clusterclass.yaml
+++ b/docker/bueringer/docker-clusterclass.yaml
@@ -143,28 +143,28 @@ spec:
                   pathType: File
                   readOnly: true
             - op: add
-              path: /spec/template/spec/kubeadmConfigSpec/files
+              path: /spec/template/spec/kubeadmConfigSpec/files/-
               valueFrom:
                 template: |
-                  - content: |
-                      apiVersion: apiserver.config.k8s.io/v1
-                      kind: AdmissionConfiguration
-                      plugins:
-                      - name: PodSecurity
-                        configuration:
-                          apiVersion: pod-security.admission.config.k8s.io/v1beta1
-                          kind: PodSecurityConfiguration
-                          defaults:
-                            enforce: "{{ .podSecurityStandard.enforce }}"
-                            enforce-version: "latest"
-                            audit: "{{ .podSecurityStandard.audit }}"
-                            audit-version: "latest"
-                            warn: "{{ .podSecurityStandard.warn }}"
-                            warn-version: "latest"
-                          exemptions:
-                            usernames: []
-                            runtimeClasses: []
-                            namespaces: [kube-system]
+                  content: |
+                    apiVersion: apiserver.config.k8s.io/v1
+                    kind: AdmissionConfiguration
+                    plugins:
+                    - name: PodSecurity
+                      configuration:
+                        apiVersion: pod-security.admission.config.k8s.io/v1beta1
+                        kind: PodSecurityConfiguration
+                        defaults:
+                          enforce: "{{ .podSecurityStandard.enforce }}"
+                          enforce-version: "latest"
+                          audit: "{{ .podSecurityStandard.audit }}"
+                          audit-version: "latest"
+                          warn: "{{ .podSecurityStandard.warn }}"
+                          warn-version: "latest"
+                        exemptions:
+                          usernames: []
+                          runtimeClasses: []
+                          namespaces: [kube-system]
                     path: /etc/kubernetes/kube-apiserver-admission-pss.yaml
           selector:
             apiVersion: controlplane.cluster.x-k8s.io/v1beta1
