--- a/docker/docker-cluster.yaml
+++ b/docker/docker-cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: Cluster
 metadata:
-  name: "my-cluster"
+  name: "ecoqube-dev"
   namespace: default
   labels:
     cni: calico
@@ -19,13 +19,13 @@ spec:
     controlPlane:
       replicas: 1
      # Bugged
-#    variables:
-#      - name: podSecurityStandard
-#        value:
-#          audit: restricted
-#          enabled: true
-#          enforce: baseline
-#          warn: restricted
+    variables:
+      - name: podSecurityStandard
+        value:
+          audit: restricted
+          enabled: true
+          enforce: baseline
+          warn: restricted
     workers:
       machineDeployments:
         - class: "default-worker"
