--- a/docker/ecoqube-dev.yaml
+++ b/docker/ecoqube-dev.yaml
@@ -249,6 +249,8 @@ metadata:
 spec:
   template:
     spec: {}
+#      loadBalancer:
+#        imageTag: v20230227-d46f45b6
 ---
 kind: KubeadmControlPlaneTemplate
 apiVersion: controlplane.cluster.x-k8s.io/v1beta1
